prodMetadata/src/objects/Press_Hits_Contacts__c.object
<CustomObject>
    <description>This object has been created so that multiple contacts with varying roles could be associated to a single press hit.</description>
    <fields>
        <fullName>Article_Title__c</fullName>
        <formula>Press_Hit__r.Article_Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Article Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Press Hits - Contacts</relationshipLabel>
        <relationshipName>Press_Hits_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Press_Hit_Ad_Value__c</fullName>
        <formula>Press_Hit__r.Ad_Value__c</formula>
        <label>Press Hit Ad Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Press_Hit_Story_Date__c</fullName>
        <formula>DATEVALUE( Press_Hit__r.Story_Date__c )</formula>
        <label>Press Hit Story Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Press_Hit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Press Hit</label>
        <referenceTo>Press_Hit__c</referenceTo>
        <relationshipLabel>Press Hits - Contacts</relationshipLabel>
        <relationshipName>Press_Hits_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Press_Hit_within_last_365__c</fullName>
        <formula>Story_Date__c &gt; TODAY() - 365</formula>
        <label>Press Hit within last 365</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Press_Outlet__c</fullName>
        <formula>Press_Hit__r.Press_Outlet__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Press Outlet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Author</fullName>
                </value>
                <value>
                    <fullName>Blogger</fullName>
                </value>
                <value>
                    <fullName>Editorial Staff</fullName>
                </value>
                <value>
                    <fullName>Interviewee</fullName>
                </value>
                <value>
                    <fullName>Referenced</fullName>
                </value>
                <value>
                    <fullName>Reporter</fullName>
                </value>
                <value>
                    <fullName>Spokesperson</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Story_Date__c</fullName>
        <formula>Press_Hit__r.Story_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Story Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tier__c</fullName>
        <formula>TEXT(Press_Hit__r.Tier__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tier</label>
        <type>Text</type>
    </fields>
    <label>Press Hits - Contacts</label>
    <nameField>
        <displayFormat>PHC-{000000}</displayFormat>
        <label>Press Hits - Contacts Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Press Hits - Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>